// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a child even if a caption is provided 1`] = `
.c2 {
  color: black60;
}

.c2.c2 {
  color: black60;
  font-family: sans;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c1 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c1 > a,
.c1 a {
  color: inherit;
}

.c1 > a:hover,
.c1 a:hover {
  color: #000;
}

@media (max-width:600px) {
  .c0 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="black60"
      fontFamily="sans"
    >
      <div>
        Here is a passed child
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a saved caption properly 1`] = `
.c2 {
  color: black60;
}

.c2.c2 {
  color: black60;
  font-family: sans;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c1 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c1 > a,
.c1 a {
  color: inherit;
}

.c1 > a:hover,
.c1 a:hover {
  color: #000;
}

@media (max-width:600px) {
  .c0 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="black60"
      fontFamily="sans"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>This is a saved caption</p>",
          }
        }
      />
    </div>
  </div>
</div>
`;
